<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">You Remind You</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_disc">YRY logo</string>
    <string name="add_button_disc">add a new voice</string>
    <string name="next_voice">next voice</string>
    <string name="following_voices">following voices</string>
    <string name="next_voice_title">Do homework for AOAC</string>
    <string name="menu_add">Add A New Voice</string>
    <string name="menu_view">View</string>
    <!-- AddVoiceActivity -->
    <string name="title_of_voice">Title:</string>
    <string name="title_of_voice_hint">Set title of the voice</string>
    <string name="recording">Recording:</string>
    <string name="start_recording_button_disc">start recording button</string>
    <string name="remindyouat">Remind You At:</string>
    <string name="alarm_setting">Alarm Setting:</string>
    <string name="repeat_daily">Repeats Daily</string>
    <string name="Done_button_disc">Done button</string>
    <string name="loading">Loading...</string>
    <string name="add_ok">Saved</string>

</resources>